lvl_junior/07_Lifehacks/077-step4/03_service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: debug-4
  name: backend-svc
spec:
  selector:
    app: go-http-server
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8080
